<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F0F0"
    tools:context="com.share.bag.ui.activitys.mine.PhoneActivity">


    <RelativeLayout
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="128px">

        <ImageView
            android:id="@+id/phone_return"
            android:layout_width="50px"
            android:layout_height="wrap_content"
            android:src="@mipmap/xiaoyu3"
            android:layout_marginStart="27dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_number"
            android:textSize="50px"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />




    </RelativeLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:gravity="center_vertical">

   <TextView
       android:layout_marginLeft="36px"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="请输入你需要绑定的新手机号"
       android:textSize="31px"
       android:textColor="#808080" />

    </LinearLayout>



    <LinearLayout
        android:paddingLeft="36px"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:gravity="center_vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/personal_phone"/>



        <EditText
            android:layout_marginLeft="36px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_new"
            android:textSize="31px"
            android:textColor="#808080"/>


    </LinearLayout>







    <LinearLayout
        android:paddingRight="98px"
        android:paddingLeft="36px"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificationcode"/>


        <EditText
            android:layout_weight="1"
            android:layout_marginLeft="36px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="31px"
            android:textColor="#808080"/>



        <Button
            android:background="@drawable/frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification2"/>


    </LinearLayout>



</LinearLayout>
