<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="administrator.example.com.baobao.ui.MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fm_show"
        android:layout_above="@id/radio"
        >


    </FrameLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:orientation="horizontal"
        android:id="@+id/radio"
        android:layout_alignParentBottom="true"
        >

        <RadioButton
            android:id="@+id/home_radiobt"
            android:layout_width="0px"
            android:layout_height="150px"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5px"
            android:drawableTop="@drawable/china_nav_bt"
            android:gravity="center"
            android:paddingLeft="47px"
            android:paddingRight="47px"
            android:paddingTop="20px"
            android:text="@string/home_home"
            android:textStyle="normal"
            android:textSize="24px"
            android:textColor="#838383"
            />
        <!--android:drawableTop="@drawable/home_nav_bt"-->
        <!--android:background="@drawable/nav_bc_shpe"-->
        <RadioButton
            android:layout_width="0px"
            android:layout_height="150px"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/china_nav_xuan"
            android:text="@string/home_selected"
            android:drawablePadding="5px"
            android:paddingTop="20px"
            android:gravity="center"
            android:id="@+id/live_radiobt"
            android:textStyle="normal"
            android:textSize="24px"
            android:textColor="#838383" />
        <!--android:background="@drawable/nav_bc_shpe"-->
        <!--android:drawableTop="@drawable/tab_panda_live_normal"-->
        <RadioButton
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/china_nav_bt3"
            android:drawablePadding="5px"
            android:paddingTop="50px"
            android:gravity="center"
            android:id="@+id/video_radiobt"
            android:text="@string/home_upload"
            android:textStyle="normal"
            android:textSize="24px"
            android:textColor="#838383"/>
        <!--android:background="@drawable/nav_bc_shpe"-->
        <!--android:drawableTop="@drawable/video_nav_bt"-->
        <RadioButton
            android:layout_width="0px"
            android:layout_height="150px"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/china_nav_bt4"
            android:text="@string/home_collection"
            android:drawablePadding="5px"
            android:paddingTop="20px"
            android:gravity="center"
            android:id="@+id/eye_radiobt"
            android:textStyle="normal"
            android:textSize="24px"
            android:textColor="#838383"  />
        <!--android:background="@drawable/nav_bc_shpe"-->
        <!--android:drawableTop="@drawable/eyes_nav_bt"-->
        <RadioButton
            android:layout_width="0px"
            android:layout_height="150px"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/china_nav_bt5"
            android:text="@string/home_mine"
            android:drawablePadding="5px"
            android:paddingTop="20px"
            android:gravity="center"
            android:id="@+id/china_radiobt"
            android:textStyle="normal"
            android:textSize="24px"
            android:textColor="#838383"/>
        <!--android:background="@drawable/nav_bc_shpe"-->
        <!--android:drawableTop="@drawable/china_nav_bt"-->




    </RadioGroup>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/zhuyekuang"
        android:layout_marginTop="1685px"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    </RelativeLayout>
