<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="administrator.example.com.baobao.ui.login.RegisteredActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:id="@+id/relativeLayout">


        <ImageView
            android:id="@+id/registered_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60px"
            android:src="@mipmap/xiaoyu3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/registered_registered"
            android:textSize="20sp" />
        <!--android:textStyle="bold"-->




    </RelativeLayout>

    <View
        android:layout_below="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="#F2F2F2"/>



    <LinearLayout
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:id="@+id/linearLayout6">



        <EditText
            android:id="@+id/registered_phone"
            android:textSize="15sp"
            style="?android:attr/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_phone"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:digits="1234567890"
            android:maxLength="11"
            />
        <!--xml：android:maxLength="10"-->
        <View
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:background="#DFDFDF"/>








    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80px">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registered_verification"
                android:textSize="15sp"
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/verification"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/registered_obtain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification1"/>


        </LinearLayout>


        <!--xml：android:maxLength="10"-->
        <View
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:background="#DFDFDF"/>








    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80px"
        android:id="@+id/linearLayout8">


        <EditText
            android:id="@+id/registered_password"
            android:textSize="15sp"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_password"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:maxLength="16"
            />

        <!--xml：android:maxLength="10"-->
        <View
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:background="#DFDFDF"/>








    </LinearLayout>




    <Button
        android:id="@+id/registered_login"
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="#FFF"
        android:background="#FC655E"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

</RelativeLayout>
